子页面完工

--- a/美团项目/index5.html
+++ b/美团项目/index5.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>美团民宿 - 民宿短租住宿预订平台，年轻就要住得不一样！</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
-    <link rel="stylesheet" href="./css/common2.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index5.css">
 </head>
 
@@ -41,6 +41,233 @@
             <a href="#" class="three"><span>查找民宿</span></a>
         </div>
     </nav>
+    <!-- 热门入住 -->
+    <div class="home">
+        <!-- 版心 -->
+        <div class="container clearfix">
+            <!-- 标题 -->
+            <div class="home-title">
+                <div class="home-title-one">
+                    <h3>热门入住地<img src="./img/lda.png" alt=""></h3>
+                </div>
+                <div class="home-title-two">
+                    <ul>
+                        <li><a href="#">
+                                <p>水韵城</p>
+                                <span>27%的选择</span>
+                            </a></li>
+                        <li><a href="#">
+                                <p>锦都银座</p>
+                                <span>14%的选择</span>
+                            </a></li>
+                        <li><a href="#">
+                                <p>幸福了</p>
+                                <span>8%的选择</span>
+                            </a></li>
+                        <li><a href="#">
+                                <p>中央城市广场</p>
+                                <span>3%的选择</span>
+                            </a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 推荐民宿 -->
+            <div class="homestay">
+                <!-- 版心 -->
+                <div class="container clearfix">
+                    <div class="homestay-box">
+                        <!-- 图片 -->
+                        <a class="homestay-img clearfix">
+                            <img src="./img/north-style.png" alt="">
+                            <img src="./img/landlord1.png" alt="">
+                            <h3>北欧蓝风格</h3>
+                            <p>整套一居室 可住3人|浦东外高桥地区</p>
+                            <span>￥ 120</span>
+                        </a>
+                        <a class="homestay-img">
+                            <img src="./img/backstreet.png" alt="">
+                            <img src="./img/landlord2.png" alt="">
+                            <h3>后街民宿</h3>
+                            <p>后街民宿 可住俩人|出门便是商业街</p>
+                            <span>￥ 160</span>
+                        </a>
+                        <a class="homestay-img">
+                            <img src="./img/big-bed.png" alt="">
+                            <img src="./img/landlord3.png" alt="">
+                            <h3>现代简约轻奢大床风</h3>
+                            <p>装修轻奢 可住2人|迪士尼度假区</p>
+                            <span>￥ 228</span>
+                        </a>
+                        <a class="homestay-img">
+                            <img src="./img/metro.png" alt="">
+                            <img src="./img/landlord4.png" alt="">
+                            <h3>灰色风格</h3>
+                            <p>整套一居室 可住1人|浦东外高桥地区</p>
+                            <span>￥ 98</span>
+                        </a>
+                        <a class="homestay-img">
+                            <img src="./img/house-bed.png" alt="">
+                            <img src="./img/landlord5.png" alt="">
+                            <h3>家庭式公寓</h3>
+                            <p>整套三居室 可住6人|温馨的小家</p>
+                            <span>￥ 299</span>
+                        </a>
+                        <a class="homestay-img">
+                            <img src="./img/pink-style.png" alt="">
+                            <img src="./img/baby.png" alt="">
+                            <h3>夏新的小窝</h3>
+                            <p>整套一居室 可住2人|满足你的少女心</p>
+                            <span>￥ 138</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- 查看更多民宿 -->
+            <div class="chakan"><a href="#">查看更多民宿</a></div>
+        </div>
+    </div>
+    <!-- 美团保障 -->
+    <div class="insurance">
+        <!-- 版心 -->
+        <div class="container clearfix">
+            <a href="#"><img src="./img/loufang.png" alt="">
+                <h5>放心入住</h5>
+                <p>千万保障先行赔付</p>
+            </a>
+            <a href="#"><img src="./img/24h.png" alt="">
+                <h5>贴心服务</h5>
+                <p>7*24小时服务</p>
+            </a>
+            <a href="#"><img src="./img/xinyong.png" alt="">
+                <h5>信用认证</h5>
+                <p>实名认证更放心</p>
+            </a>
+            <a href="#"><img src="./img/hezuo.png" alt="">
+                <h5>合作无忧</h5>
+                <p>房东保险</p>
+            </a>
+        </div>
+    </div>
+    <!-- 热门城市 -->
+    <div class="city">
+        <!-- 版心 -->
+        <div class="container clearfix">
+            <dl class="city-one">
+                <dt>热门城市</dt>
+                <a href="#">
+                    <dd>北京的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>上海的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>南京的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>杭州的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>厦门的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>成都的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>武汉的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>长沙的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>三亚的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>信阳的民宿</dd>
+                </a>
+
+            </dl>
+            <dl class="city-two">
+                <a href="#">
+                    <dt>热门房源</dt>
+                </a>
+                <a href="#">
+                    <dd>有厨具的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>有洗衣机的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>有今夜特价的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>有限时折扣的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>适合情侣的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>视野开阔的民宿</dd>
+                </a>
+                <a href="#">
+                    <dd>别墅</dd>
+                </a>
+                <a href="#">
+                    <dd>复式loft</dd>
+                </a>
+                <a href="#">
+                    <dd>度假民宿</dd>
+                </a>
+
+            </dl>
+        </div>
+    </div>
+    <!-- 底部 -->
+    <footer>
+        <!-- 版心 -->
+        <div class="container clearfix">
+            <!-- 上半部分 -->
+            <div class="footer-top clearfix">
+                <div class="footer-one">
+                    <h5>公司信息</h5>
+                    <ul>
+                        <li><a href="#">关于我们</a></li>
+                        <li><a href="#">工作机会</a></li>
+                    </ul>
+                </div>
+                <div class="footer-two">
+                    <h5>网站帮助</h5>
+                    <ul>
+                        <li><a href="#">服务协议</a></li>
+                        <li><a href="#">隐私政策</a></li>
+                        <li><a href="#">网站地图</a></li>
+                        <li><a href="#">民宿推荐</a></li>
+                    </ul>
+                </div>
+                <div class="footer-three">
+                    <h5>人工客服</h5>
+                    <ul>
+                        <li>
+                            客服电话
+                            <span>400-0660-190</span>
+                        </li>
+                        <li>
+                            登录问题
+                            <span>10107888</span>
+                        </li>
+                    </ul>
+                </div> 
+                <div class="footer-four">
+                    <img src="./img/erweima1.png" alt=""><br>
+                    <span>下载美团民宿app</span>
+                </div>
+            </div> 
+            <div class="footer-bottom">
+                <a href="#">京公网安备11010502025545号</a>
+                <a href="#">京ICP备10211739号</a>
+                <a href="#">营业资质</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
