--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -83,7 +83,7 @@
                 <a href="index2.html">美团外卖</a>
                 <a href="index1.html">猫眼电影</a>
                 <a href="index3.html">商家入驻</a>
-                <a href="index4.html">民宿 / 公寓</a>
+                <a href="index5.html">民宿 / 公寓</a>
                 <a href="#">美团酒店</a>
                 <a href="#">美团公益</a>
             </div>
@@ -136,7 +136,7 @@
                         <img src="./img/avatar.jpg" alt="">
                         <p>Hi！ 你好</p>
                         <a href="">注册</a><br>
-                        <a href="">登录</a>
+                        <a href="./index4.html">登录</a>
                     </div>
                     <div class="serve-rigth-bottom">
                         <img src="./img/QR-code.png" alt="">
