--- a/美团项目/business.html
+++ b/美团项目/business.html
@@ -8,7 +8,7 @@
     <title>商家入驻</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common2.css">
-    <link rel="stylesheet" href="./css/index3.css">
+    <link rel="stylesheet" href="./css/business.css">
 </head>
 
 <body>
