--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -80,10 +80,10 @@
             </div>
             <!-- 美团功能 -->
             <div class="searchnav-bottom">
-                <a href="index2.html">美团外卖</a>
-                <a href="index1.html">猫眼电影</a>
-                <a href="index3.html">商家入驻</a>
-                <a href="index5.html">民宿 / 公寓</a>
+                <a href="takeout.html">美团外卖</a>
+                <a href="movie.html">猫眼电影</a>
+                <a href="business.html">商家入驻</a>
+                <a href="homestay.html">民宿 / 公寓</a>
                 <a href="#">美团酒店</a>
                 <a href="#">美团公益</a>
             </div>
@@ -136,7 +136,7 @@
                         <img src="./image/avatar.jpg" alt="">
                         <p>Hi！ 你好</p>
                         <a href="">注册</a><br>
-                        <a href="./index4.html">登录</a>
+                        <a href="./login.html">登录</a>
                     </div>
                     <div class="serve-rigth-bottom">
                         <img src="./image/QR-code.png" alt="">
