--- a/腾讯新闻移动端/index.html
+++ b/腾讯新闻移动端/index.html
@@ -62,6 +62,24 @@
              <li><a href="#">更多</a></li>
          </ul>
       </div>
+      <!-- 第二部分 -->
+      <div class="section-two">
+          <!-- 标题 -->
+          <div class="section-two-title">
+              <a href="#">
+                  <h3>2019·习近平的信札 丨 一纸情长润书香</h3>
+                  <span>置顶</span>
+                  <b>央视新闻客户端</b>
+                  <b>1小时前</b>
+              </a>
+              <a href="#">
+                <h3>我们的新时代·字述2019 | 根</h3>
+                <span>置顶</span>
+                 <b>新华社全媒报道平台</b>
+                 <b>1小时前</b>
+              </a>
+          </div>
+      </div>
     </div>
 </body>
 
