--- a/美团项目/homestay.html
+++ b/美团项目/homestay.html
@@ -8,7 +8,7 @@
     <title>美团民宿 - 民宿短租住宿预订平台，年轻就要住得不一样！</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index5.css">
+    <link rel="stylesheet" href="./css/homestay.css">
 </head>
 
 <body>
