--- a/美团项目/login.html
+++ b/美团项目/login.html
@@ -7,7 +7,7 @@
     <title>登录 | 美团网</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common2.css">
-    <link rel="stylesheet" href="./css/index4.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <!-- 头部 -->
