--- a/美团项目/movie.html
+++ b/美团项目/movie.html
@@ -8,7 +8,7 @@
     <title>猫眼电影 - 一网打尽好电影</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index1.css">
+    <link rel="stylesheet" href="./css/movie.css">
 </head>
 
 <body>
