--- a/美团项目/takeout.html
+++ b/美团项目/takeout.html
@@ -8,7 +8,7 @@
     <title>外卖,美团外卖,外卖网,外卖网上订餐,美团,美团网</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common2.css">
-    <link rel="stylesheet" href="./css/index2.css">
+    <link rel="stylesheet" href="./css/takeout.css">
 </head>
 
 <body>
@@ -104,7 +104,7 @@
               </a>
               </div>
               <div class="teamwork-right">
-                  <img src="./imaeg/./story3.jpg" alt="">
+                  <img src="./image/./story3.jpg" alt="">
               </div>
             </div>
             <ul class="radius">
