--- a/com.qq.xw.www/index.html
+++ b/com.qq.xw.www/index.html
@@ -69,13 +69,13 @@
             <!-- 标题 -->
             <div class="section-two-title">
                 <a href="#">
-                    <h3>2019·习近平的信札 丨 一纸情长润书香</h3>
+                    <h3>国家主席习近平二〇二〇年新年贺词特别报道</h3>
                     <span>置顶</span>
                     <b>央视新闻客户端</b>
                     <b>1小时前</b>
                 </a>
                 <a href="#">
-                    <h3>我们的新时代·字述2019 | 根</h3>
+                    <h3>这个声音，为你点亮新年</h3>
                     <span>置顶</span>
                     <b>新华社全媒报道平台</b>
                     <b>1小时前</b>
