--- a/com.qq.xw.www/hotnews.html
+++ b/com.qq.xw.www/hotnews.html
@@ -164,25 +164,12 @@
                 </ul>
                 <span>广告</span>
                 <span>京东商城</span>
-                
+                <div class="section-four">
+                    <a href="#">进入体育频道 <i><img src="./image/right.png" alt=""></i></a>
+                </div>
             </a>
         </div>
 
-        <!-- 第二主体部分 -->
-        <!-- <div class="main"> -->
-
-        <!-- 第二部分 -->
-        <!-- <div class="section-six"> -->
-        <!-- 标题 -->
-
-        <!-- 重复代码 -->
-       
-
-        <!-- 第四部分 加载更多-->
-        <!-- <div class="section-four">
-                <a href="#">加载更多<i><img src="./image/right.png" alt=""></i></a>
-            </div>
-        </div> -->
 </body>
 
 </html>
