--- a/com.qq.xw.www/index.html
+++ b/com.qq.xw.www/index.html
@@ -24,8 +24,8 @@
                 <img src="./image/logo.png" alt="">
             </div>
             <div class="header-title-right">
-                <a href="#"> <img src="./image/headr.png" alt=""></a>
-                <a href="#"> <img src="./image/fenlei.png" alt=""></a>
+                <a href="./login.html"> <img src="./image/headr.png" alt=""></a>
+                <a href="./city.html"> <img src="./image/fenlei.png" alt=""></a>
             </div>
         </div>
         <!-- 内容 -->
