--- a/com.meituan.www/business.html
+++ b/com.meituan.www/business.html
@@ -28,23 +28,26 @@
                 <h3>请选择您的合作行业</h3>
             </div>
             <ul>
-                <li><a href="#" class="one"></a>
+                <li>
+                    <a href="#" class="one">
+                        <img src="./image/meishi.png" alt="">
+                    </a>
                     <h4>美食</h4>
                     <p>海量流量、精准营销、深度分析，助力您的餐厅销量口碑双丰收</p>
                 </li>
-                <li><a href="#" class="two"></a>
+                <li><a href="#" class="two"> <img src="./image/waimai.png" alt=""></a>
                     <h4>外卖</h4>
                     <p>美团外卖诚意邀请餐饮类、超市类、药品类商家入驻</p>
                 </li>
-                <li><a href="#" class="three"></a>
+                <li><a href="#" class="three"><img src="./image/jiudian.png" alt=""></a>
                     <h4>酒店</h4>
                     <p>新美大双平台，轻松助力酒店实现销售、口碑双增长</p>
                 </li>
-                <li><a href="#" class="four"></a>
+                <li><a href="#" class="four"><img src="./image/lvyou.png" alt=""></a>
                     <h4>境内旅游</h4>
                     <p>海量流量、精准营销、深度分析，美团境内度假助您票量大卖，名利双收</p>
                 </li>
-                <li><a href="#" class="five"></a>
+                <li><a href="#" class="five"><img src="./image/zonghe.png" alt=""></a>
                     <h4>综合商家</h4>
                     <p>休闲娱乐、丽人、亲子、教育、KTV、家装等商家</p>
                 </li>
