--- a/com.meituan.www/movie.html
+++ b/com.meituan.www/movie.html
@@ -286,7 +286,7 @@
                 </div>
                 <!-- 第一行 -->
                 <a class="have-the-call-one clearfix">
-                    <img src="./imaeg/tangrenjietanan3.png" alt="">
+                    <img src="./image/tangrenjietanan3.png" alt="">
                     <div class="have-the-call-one-box">
                         <h5>唐人街探案3</h5>
                         <p>上映时间：2020-01-25</p>
