--- a/com.qq.xw.www/hotnews.html
+++ b/com.qq.xw.www/hotnews.html
@@ -23,16 +23,16 @@
                 <img src="./image/logo.png" alt="">
             </div>
             <div class="header-title-right">
-                <a href="#"> <img src="./image/headr.png" alt=""></a>
-                <a href="#"> <img src="./image/fenlei.png" alt=""></a>
+                <a href="./login.html"> <img src="./image/headr.png" alt=""></a>
+                <a href="./city.html"> <img src="./image/fenlei.png" alt=""></a>
             </div>
         </div>
         <!-- 内容 -->
         <div class="header-content clearfix">
             <ul>
                 <li><a href="./index.html">要闻</a></li>
-                <li><a href="hotnews.html">热点</a></li>
-                <li><a href="#">视频</a></li>
+                <li><a href="./hotnews.html">热点</a></li>
+                <li><a href="./video.html">视频</a></li>
             </ul>
         </div>
     </header>
