--- a/com.qq.xw.www/index.html
+++ b/com.qq.xw.www/index.html
@@ -32,8 +32,8 @@
         <div class="header-content clearfix">
             <ul>
                 <li><a href="./index.html">要闻</a></li>
-                <li><a href="hotnews.html">热点</a></li>
-                <li><a href="#">视频</a></li>
+                <li><a href="./hotnews.html">热点</a></li>
+                <li><a href="./video.html">视频</a></li>
             </ul>
         </div>
     </header>
