移动端完工

--- a/com.qq.xw.www/video.html
+++ b/com.qq.xw.www/video.html
@@ -42,9 +42,94 @@
         <!-- 第一部分 -->
         <div class="one">
             <div class="section-one clearfix">
-                <a href="">11</a>
+                <a href="">
+                    <h5>【集锦】开拓者93-117尼克斯 兰德尔22分率队连胜安东尼空砍26分</h5>
+                    <i><img src="./image/xw_icon_video_play.svg" alt=""></i>
+                    <span> <img src="./image/xw_icon_video_watch.svg" alt=""> 26万 | 03:06</span>
+                </a>
+                <div class="section-two">
+                    <span> <img src="./image/lanqiulogo.webp" alt=""> 波兰体育开拓者</span>
+                    <b>体育</b>
+                </div>
             </div>
+        </div>
+        <!-- 第二部分 -->
+        <div class="two">
+            <div class="section-first clearfix">
+                <a href="">
+                    <h5>台军黑鹰直升机失联“参谋总长”“政战局长”等高官都在机上</h5>
+                    <i><img src="./image/xw_icon_video_play.svg" alt=""></i>
+                    <span> <img src="./image/xw_icon_video_watch.svg" alt=""> 49万 | 01:00</span>
+                </a>
+                <div class="section-two">
+                    <span> <img src="./image/huanqiulogo.webp" alt=""> 环球时报新媒体</span>
+                    <b>军事</b>
+                </div>
+            </div>
+        </div>
+        <!-- 第三部分 -->
+        <div class="three">
+            <div class="section-three clearfix">
+                <a href="">
+                    <h5>《庆余年》完美收官，二皇子原来是最大的反派！</h5>
+                    <i><img src="./image/xw_icon_video_play.svg" alt=""></i>
+                    <span> <img src="./image/xw_icon_video_watch.svg" alt=""> 12万 | 02:53</span>
+                </a>
+                <div class="section-two">
+                    <span> <img src="./image/qingyunianlogo.webp" alt=""> 庆余年官方账户</span>
+                    <b>电视</b>
+                </div>
+            </div>
+        </div>
+        <!-- 第五部分广告 -->
+        <div class="section-five">
+            <!-- 标题 -->
+            <a class="section-five-title">
+                <p>超市卖的东西越来越贵？京东超市好货直降！满199立减130！</p>
+                <img src="./image/jingdong1.jpg" alt="">
+                <span>广告</span>
+                <b>京东商城</b>
+            </a>
+        </div>
+        <!-- 第四部分 -->
+        <div class="four">
+            <div class="section-four clearfix">
+                <a href="">
+                    <h5>《雷克萨斯LX u20》震撼上市 百公里提速仅需要6.8秒！</h5>
+                    <i><img src="./image/xw_icon_video_play.svg" alt=""></i>
+                    <span> <img src="./image/xw_icon_video_watch.svg" alt=""> 19万 | 01:28</span>
+                </a>
+                <div class="section-two">
+                    <span> <img src="./image/qichelogo2.webp" alt=""> 抖音官方车评人</span>
+                    <b>汽车</b>
+                </div>
+            </div>
+        </div>
+        <!-- 第六部分 -->
+        <div class="six">
+            <div class="section-six clearfix">
+                <a href="">
+                    <h5>赵丽颖冯绍峰合体秀恩爱，下象棋放烟花超欢脱，夫妻撒狗粮甜skr人</h5>
+                    <i><img src="./image/xw_icon_video_play.svg" alt=""></i>
+                    <span> <img src="./image/xw_icon_video_watch.svg" alt=""> 40万 | 00:28</span>
+                </a>
+                <div class="section-two">
+                    <span> <img src="./image/zhaoliyinglogo.webp" alt=""> M娱乐星侦探</span>
+                    <b>娱乐</b>
+                </div>
+            </div>
+        </div>
+        <!-- 第七部分广告 -->
+        <div class="section-seven">
+            <!-- 标题 -->
+            <a class="section-seven-title">
+                <p>轻钢别墅特惠建房，3折供货，送全屋整装+优惠补贴，19.8万造价！</p>
+                <img src="./image/home666.jpg" alt="">
+                <span>广告</span>
+                <b>科立方</b>
+            </a>
         </div>
     </div>
 </body>
+
 </html>
