--- a/com.meituan.www/index.html
+++ b/com.meituan.www/index.html
@@ -21,7 +21,7 @@
         <div class="container clearfix">
             <!-- 左边文字 -->
             <div class="topnav-left">
-                <img src="./img/定位.png" alt="">
+                <img src="./image/dingwei.png" alt="">
                 <span>宿迁</span>
                 <a href="#">切换城市</a>
                 <div class="topnav-left-rifht">
@@ -771,7 +771,7 @@
                 <!-- 右边 -->
                 <div class="meituan-about-right">
                     <a href="">京公网安备11010502025545号</a>
-                    <img src="./img/电子执照.png" alt="" title="营业执照" width="38px">
+                    <img src="./image/zhizhao.png" alt="" title="营业执照" width="38px">
                     <a href="" class="zhizhao">北京三快科技有限公司</a>
                     <a href="" class=".tupian1"><img src="./image/manage.png" alt="" title="备案信息" width="108px"></a>
                     <a href="" class=".tupian2"><img src="./image/dependable.png" alt="" title="可信任网站认证" width="108px"></a>
