--- a/com.meituan.www/index.html
+++ b/com.meituan.www/index.html
@@ -139,7 +139,7 @@
                         <a href="./login.html">登录</a>
                     </div>
                     <div class="serve-rigth-bottom">
-                        <img src="./image/QR-code.png" alt="">
+                        <img src="./image/qr_code.png" alt="">
                         <p>美团APP 手机版</p>
                         <a href="">1元起</a>
                         <a href="">吃喝玩乐</a>
@@ -168,7 +168,7 @@
                         <s>门市价 $88</s>
                     </a>
                     <a href="" class="food-cake">
-                        <img src="./image/Happy.Cake.png" alt="">
+                        <img src="./image/happycake.png" alt="">
                         <h5>生日双层蛋糕</h5>
                         <p>美少女专属</p>
                         <span>$168元</span>
@@ -365,7 +365,7 @@
                         <span>￥</span>
                         <span>69.9</span><span>起</span>
                     </a> <a class="like-content">
-                        <img src="./image/PanGu.png" alt="">
+                        <img src="./image/pandgu.png" alt="">
                         <h5>盘古烤肉</h5>
                         <img src="./image/full-start.png" alt="">
                         <p>蓝天商贸城</p>
