--- a/com.meituan.www/takeout.html
+++ b/com.meituan.www/takeout.html
@@ -64,13 +64,13 @@
                 <div class="service-left-title">
                     <span>品类全覆盖，应有尽有</span>
                 </div>
-                <a href="#"><img src="./image/Desserts-picked.png" alt="">美食 Delicacy</a>
+                <a href="#"><img src="./image/desserts.png" alt="">美食 Delicacy</a>
                 <p>大牌优惠</p>
-                <a href="#"><img src="./image/Desserts-picked.png" alt="">甜点饮品 Desserts&Drinks</a>
+                <a href="#"><img src="./image/desserts.png" alt="">甜点饮品 Desserts&Drinks</a>
                 <p>幸福甜蜜</p>
                 <a href="#"><img src="./image/fruit-picked.png" alt="">水果生鲜 Fresh foods</a>
                 <p>新鲜速达</p>
-                <a href="#"><img src="./image/Supermarket-picked.png" alt="">超市便利 Supermarket</a>
+                <a href="#"><img src="./image/supermarket.png" alt="">超市便利 Supermarket</a>
                 <p>优惠促销</p>
             </div>
             <!-- 服务介绍右边 -->
