--- a/com.meituan.www/business.html
+++ b/com.meituan.www/business.html
@@ -16,7 +16,7 @@
     <header>
         <!-- 版心 -->
         <div class="container">
-            <img src="./image/logo-ed309953a2bd8ed10e4b0599bc0335b1.png" alt="">
+            <img src="./image/logo_shangjia.png" alt="">
         </div>
     </header>
     <!--中间 -->
